<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContaTelefonicaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editAssinatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:ems="10"
            android:hint="@string/assinaturaText"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editMinutosChamadaLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:ems="10"
            android:hint="@string/minutosChamadaLocalText"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editMinutosChamadaCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:ems="10"
            android:hint="@string/minutosChamadaCelularText"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/buttonCalcularTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCalcularText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>