<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonCalculadora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCalculadoraText" />

        <Button
            android:id="@+id/buttonContaTelefonica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonContaTelefonicaText" />

        <Button
            android:id="@+id/buttonIntegrantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonIntegrantesText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>