<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContaTelefonicaResultadoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:baselineAligned="false"
        android:gravity="center|start|end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textAssinatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assinaturaResultText" />

            <TextView
                android:id="@+id/textChamadaLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chamadaLocalResultText" />

            <TextView
                android:id="@+id/textChamadaCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chamadaCelularResultText" />

            <TextView
                android:id="@+id/textValorTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/contaTelefonicaValorTotalResultText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textAssinaturaValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textChamadaLocalValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textChamadaCelularValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textValorTotalValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>